[project]
name = "autoresearch-ds"
version = "0.1.0"
description = "Autonomous data science research agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0,<2.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pyarrow>=14.0.0",
    "imbalanced-learn>=0.11.0",
    "tabulate>=0.9.0",
    "torch>=2.0.0,<=2.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
